# LibraryManagementSystem

./: .env.example  .gitignore  .lockfile-lintrc.json  .mcp.json  .npmrc  .pre-commit-config.yaml  .taurignore  ANALYSE-UEBERGABE.md  CHANGELOG.md  CLAUDE.md  DEPLOY-ROUTINES.md  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  backend.spec  backend_entry.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  research_3band_waveforms.md  research_track_analysis.md  verify_out.txt  verify_out_2.txt  verify_out_20.txt  verify_out_3.txt  verify_out_4.txt  verify_out_5.txt
.claude/: launch.json  settings.json  settings.local.json.example
.claude/agents/: audio-stack-reviewer.md  backend-agent.md  director.md  doc-syncer.md  e2e-tester.md  frontend-agent.md  qa-agent.md  route-architect.md  rust-agent.md  test-runner.md
.claude/commands/: approve.md  audit.md  changelog-bump.md  commit.md  dashboard.md  dev-full.md  full-check.md  gate-list.md  gate-pass.md  gate-reject.md  gate-status.md  help.md  pipeline.md  pr-new.md  print-routine.md  regen-maps.md  reject.md  research-new.md  route-add.md  sync-check.md  sync-docs.md  tauri-build.md  tauri-dev.md  test-py.md
.claude/docs/: FILE_MAP.md  architecture.md  backend-index.md  frontend-index.md  rust-index.md
.claude/hooks/: auto-push-after-commit.py  format-on-edit.py
.claude/rules/: agentic-mode.md  coding-rules.md  commit-and-git.md  research-pipeline.md  self-correction.md  tooling.md  troubleshooting.md  working-style.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: _db_lock.py  analysis_cache.py  analysis_db_writer.py  analysis_engine.py  analysis_inspector.py  analysis_settings.py  anlz_cue_patch.py  anlz_safe.py  anlz_sidecar.py  anlz_writer.py  audio_analyzer.py  audio_tags.py  auth.py  auth_db.py  backup_engine.py  batch_worker.py  config.py  database.py  db_taste.py  download_registry.py  external_track_match.py  folder_watcher.py  format_converter.py  format_swap_codec.py  format_swap_models.py  format_swap_tracker.py  import_tracker.py  library_format_swap.py  library_source.py  live_database.py  logging_utils.py  main.py  pairing_store.py  phrase_generator.py  playcount_sync.py  popularity_engine.py  rate_limit.py  rbep_parser.py  rekordbox_bridge.py  rekordbox_export.py  (+14 more)
app/downloader/: __init__.py  _genre_starter.py  aiff.py  concurrency.py  genre_sync.py  match_adapter.py  migration.py  models.py  orchestrator.py  quality.py  resolver.py  search.py
app/metadata_fixer/: __init__.py  applier.py  detector.py  schema.py
app/templates/: build_template.py  exportLibrary_template.db
docs/: ANALYSIS_HANDOVER.md  DOWNLOAD_EVALUATION.md  FILE_MAP.md  HANDOVER.md  MAP.md  MAP_L2.md  NAMING_MAP.md  PROJECT_OVERVIEW.md  SECURITY.md  architecture.md  backend-index.md  e2e-testing.md  frontend-index.md  index.html  rust-index.md  self-imposed-limits-audit.md
docs/handbook/: ch01-introduction.html  ch02-history.html  ch03-features.html  ch04-architecture.html  ch05-tech-stack.html  ch06-data-flows.html  ch07-backend.html  ch08-api-reference.html  ch09-services.html  ch10-database.html  ch11-analysis.html  ch12-anlz.html  ch13-usb-export.html  ch14-frontend.html  ch15-components.html  ch16-daw.html  ch17-waveform.html  ch18-rust-tauri.html  ch19-native-audio.html  ch20-soundcloud.html  ch21-security.html  ch22-build-deploy.html  ch23-testing.html  ch24-pipeline.html  ch25-roadmap.html  ch26-dev-guide.html  ch27-glossary.html  ch28-appendices.html  index.html
docs/research/: README.md  _INDEX.md  _TEMPLATE.md
frontend/: .eslintrc.cjs  .npmrc  .prettierrc  index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: splashscreen.html
frontend/src/: index.css  main.jsx
obsidian-dj-vault/: Home.md  README.md
obsidian-dj-vault/01 Musiktheorie/: Akkorde und Harmonien.md  Dur und Moll.md  Halbton und Ganzton.md  Intervalle.md  Musiktheorie MOC.md  Quintenzirkel.md  Taktart und Phrasing-Grundlagen.md  Tonarten und Keys.md
obsidian-dj-vault/02 Harmonisches Mixing/: Camelot Wheel.md  Energy Boost Mixing.md  Harmonisches Mixing MOC.md  Key-Mixing-Regeln.md  Open Key Notation.md  Stimmung und Energie.md
obsidian-dj-vault/03 BPM und Pitch/: BPM und Pitch MOC.md  BPM-Ranges nach Genre.md  BPM-Sprung und Key-Änderung.md  Double und Half Time Mixing.md  Master Tempo (Key Lock).md  Pitch Fader und Tonhöhe.md  (+1 more)
scripts/: compare_rekordbox.py  ensure-deps.mjs  local-release.ps1  pipeline_dashboard.py  pipeline_status.py  print_routine.py  regen_maps.py  screenshot.py  security-audit.ps1  security-audit.sh  selftest_analysis.py  test_xml_sync.py  validate_research_docs.py
spotiflac-cli/: .gitignore  go.mod  go.sum  main.go
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  soundcloud_client.rs
src-tauri/src/audio/: analysis.rs  commands.rs  engine.rs  export.rs  fingerprint.rs  metadata.rs  mod.rs  playback.rs
tests/: conftest.py  test_analysis.py  test_analysis_cache.py  test_analysis_db_writer.py  test_analysis_edge.py  test_anlz_cue_patch.py  test_anlz_reference_parse.py  test_anlz_writer.py  test_anlz_writer_guards.py  test_audio_analyzer.py  test_audio_tags.py  test_audio_tags_provenance.py  test_auth.py  test_backup_engine.py  test_batch_worker.py  test_compare_rekordbox.py  test_concurrency.py  test_database.py  test_db_taste.py  test_download_registry.py  test_download_registry_schema.py  test_downloads_unified.py  test_external_track_match.py  test_folder_watcher.py  test_format_converter.py  test_format_converter_perf.py  test_format_swap.py  test_import_tracker.py  test_library_format_swap.py  test_library_source.py  test_logging_redaction.py  test_metadata_fixer_applier.py  test_metadata_fixer_detector.py  test_metadata_fixer_schema.py  test_onelibrary_wal_flush.py  test_pairing.py  test_pairing_store.py  test_pdb_structure.py  test_phrase_batch.py  test_playcount_sync.py  (+28 more)
(+327 files in other folders)
