[package]
name = "rb-editor-pro"
version = "0.1.0"
description = "Rekordbox Editor Pro Desktop"
authors = ["Antigravity"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = [] }
tauri-plugin-shell = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
url = "2"
open = "5"
dotenvy = "0.15"

[features]
custom-protocol = ["tauri/custom-protocol"]
