[package]
name = "library-management-system"
version = "0.1.2"
description = "Rekordbox Editor Pro Desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-shell = "2.2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.9"
url = "2"
open = "5"
dotenvy = "0.15"
log = "0.4"

# --- Native Audio Engine ---
cpal = "0.15"
memmap2 = "0.9"
rustfft = "6.1"
rubato = "0.14"
ringbuf = "0.3"
crossbeam-channel = "0.5"

# --- Export & Metadata ---
hound = "3.5"
lofty = "0.21"

[dependencies.symphonia]
version = "0.5"
features = ["mp3", "flac", "wav", "isomp4", "alac"]

[features]
custom-protocol = ["tauri/custom-protocol"]
